--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,16 @@ plugins {
 
 ext {
     nettyVersion = '4.1.65.Final'
+    jettyVersion = '9.4.42.v20210604'
     jUnitVersion = '4.13.2'
     mockitoAllVersion = '1.10.19'
     mockitoCoreVersion = '3.3.3'
     orgSfl4jVersion = '1.7.30'
+    logbackVersion = '1.2.3'
+    googleGuavaApi = 'com.google.guava:guava:30.1.1-jre'
     componentName='wilma'
     javaxServletApi='javax.servlet:javax.servlet-api:3.1.0'
+    javaxAnnotationApi='javax.annotation:javax.annotation-api:1.3.2'
 }
 
 apply from: 'common.gradle'
