--- a/wilma-application/modules/wilma-engine/build.gradle
+++ b/wilma-application/modules/wilma-engine/build.gradle
@@ -82,10 +82,10 @@ dependencies {
     implementation project(':wilma-application:wilma-stub-configuration-domain')
     implementation project(':wilma-application:wilma-property-validation')
     implementation project(':wilma-application:wilma-properties')
-    implementation 'com.google.guava:guava:18.0'
+    implementation "$googleGuavaApi"
     implementation group: 'jetty', name: 'jasper-compiler', version:'4.2.20RC0'
     implementation group: 'javax.servlet.jsp', name: 'jsp-api', version:'2.2'
-    implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'8.1.16.v20140903'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version:"${jettyVersion}"
     implementation group: 'ognl', name: 'ognl', version:'3.0.8'
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "$javaxAnnotationApi"
 }
