--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     }
 
     testImplementation "junit:junit:${jUnitVersion}"
-    testImplementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
+    testImplementation "$googleGuavaApi"
     testImplementation (group: 'io.netty', name: 'netty-all', version: '4.1.65.Final')
     testImplementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.42.v20210604'
 }
