--- a/wilma-application/modules/wilma-webapp/build.gradle
+++ b/wilma-application/modules/wilma-webapp/build.gradle
@@ -34,13 +34,13 @@ dependencies {
     implementation project(':wilma-application:wilma-message-sequence')
     implementation project(':wilma-application:wilma-message-marker')
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version:'1.3'
-    implementation 'org.eclipse.jetty:jetty-server:8.1.16.v20140903'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-server', version:"${jettyVersion}"
     implementation 'org.json:json:20180813'
     implementation group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
-    implementation 'com.google.guava:guava:18.0'
+    implementation "$googleGuavaApi"
     implementation group: 'org.apache.bcel', name: 'bcel', version:'5.2'
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "$javaxAnnotationApi"
     implementation "$javaxServletApi"
-    testImplementation 'org.apache.ant:ant:1.9.4'
+    testImplementation 'org.apache.ant:ant:1.10.10'
 }
