--- a/wilma-extras/circuitBreaker/build.gradle
+++ b/wilma-extras/circuitBreaker/build.gradle
@@ -2,7 +2,7 @@ dependencies {
     implementation project(':wilma-application:wilma-domain')
     implementation project(':wilma-application:wilma-webapp')
     implementation project(':wilma-application:wilma-stub-configuration-domain')
-    implementation 'com.google.guava:guava:18.0'
+    implementation "$googleGuavaApi"
     implementation group: 'org.slf4j', name: 'slf4j-api', version: "${orgSfl4jVersion}"
     implementation "$javaxServletApi"
     testImplementation group: 'junit', name: 'junit', version: "${jUnitVersion}"
