--- a/wilma-extras/replicator/build.gradle
+++ b/wilma-extras/replicator/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     implementation project(':wilma-application:wilma-stub-configuration-domain')
     implementation project(':wilma-application:wilma-webapp')
     implementation 'commons-io:commons-io:2.4'
-    implementation 'com.google.guava:guava:18.0'
+    implementation "$googleGuavaApi"
     implementation group: 'org.slf4j', name: 'slf4j-api', version: "${orgSfl4jVersion}"
     //this httpclient need to be in synch with httpclient used by the proxy lib of wilma
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.13'
