--- a/wilma-extras/reverseProxy/build.gradle
+++ b/wilma-extras/reverseProxy/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     implementation project(':wilma-application:wilma-stub-configuration-domain')
     implementation group: 'org.slf4j', name: 'slf4j-api', version: "${orgSfl4jVersion}"
     implementation 'commons-io:commons-io:2.4'
-    implementation 'com.google.guava:guava:18.0'
+    implementation "$googleGuavaApi"
     implementation 'org.json:json:20180813'
     implementation group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
     implementation "$javaxServletApi"
