--- a/wilma-message-search/modules/wilma-message-search-engine/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-engine/build.gradle
@@ -46,11 +46,11 @@ dependencies {
     implementation project(':wilma-message-search:wilma-message-search-lucene')
     implementation project(':wilma-message-search:wilma-message-search-webapp')
     implementation project(':wilma-message-search:wilma-message-search-properties')
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.13'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
     implementation(group: 'org.slf4j', name: 'jcl-over-slf4j', version:'1.7.0') {
         exclude(module: 'slf4j-api')
     }
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "$javaxAnnotationApi"
     implementation group: 'org.apache.activemq', name: 'activemq-spring', version:'5.11.1'
 }
 
