--- a/wilma-message-search/modules/wilma-message-search-lucene/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-lucene/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     implementation group: 'org.apache.activemq', name: 'activemq-spring', version:'5.11.1'
     implementation project(':wilma-message-search:wilma-message-search-domain')
     implementation project(':wilma-message-search:wilma-message-search-properties')
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation "$javaxAnnotationApi"
 }
