--- a/wilma-message-search/modules/wilma-message-search-webapp/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-webapp/build.gradle
@@ -20,7 +20,7 @@
 description = 'Wilma Message Search Webapp'
 
 dependencies {
-    implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version:'1.9.10'
+    implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version:'1.9.13'
     implementation group: 'javax.inject', name: 'javax.inject', version:'1'
     implementation group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     implementation group: 'org.eclipse.jetty', name: 'jetty-server', version:'9.4.30.v20200611'
@@ -28,7 +28,7 @@ dependencies {
     implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'9.4.30.v20200611'
     implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version:'9.4.30.v20200611'
     implementation group: 'org.eclipse.jetty', name: 'apache-jsp', version:'9.4.30.v20200611'
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version:'1.0.13'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
     implementation(group: 'org.slf4j', name: 'jcl-over-slf4j', version:'1.7.0') {
         exclude(module: 'slf4j-api')
     }
@@ -36,7 +36,7 @@ dependencies {
     implementation project(':wilma-message-search:wilma-message-search-lucene')
     implementation project(':wilma-message-search:wilma-message-search-properties')
     implementation group: 'org.apache.commons', name: 'commons-compress', version:'1.18'
-    implementation group: 'org.apache.commons', name: 'commons-io', version:'1.3.2'
+    implementation group: 'commons-io', name: 'commons-io', version:'2.4'
     implementation(group: 'javax.servlet', name: 'jstl', version:'1.2') {
     }
 }
