--- a/wilma-application/modules/wilma-stub-configuration-support/build.gradle
+++ b/wilma-application/modules/wilma-stub-configuration-support/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation project(':wilma-application:wilma-stub-configuration-domain')
     implementation project(':wilma-application:wilma-common')
     implementation project(':wilma-application:wilma-proxy-integration')
-    implementation 'org.json:json:20180813'
+    implementation "$orgJsonApi"
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
     implementation group: 'com.github.everit-org.json-schema', name: 'org.everit.json.schema', version: '1.12.1'
     implementation 'org.apache.commons:commons-lang3:3.3.2'
