--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ ext {
     componentName='wilma'
     javaxServletApi='javax.servlet:javax.servlet-api:3.1.0'
     javaxAnnotationApi='javax.annotation:javax.annotation-api:1.3.2'
+    orgJsonApi='org.json:json:20210307'
 }
 
 apply from: 'common.gradle'
@@ -55,7 +56,7 @@ sonarqube {
         property "sonar.exclusions", "**/wilma-functionaltest/**/*"
     }
 }
-project.tasks["sonarqube"].onlyIf { project.hasProperty('systemProp.sonar.login') }
+//project.tasks["sonarqube"].onlyIf { project.hasProperty('systemProp.sonar.login') }
 
 if (hasProperty('buildScan')) {
     buildScan {
