--- a/wilma-application/modules/wilma-webapp/build.gradle
+++ b/wilma-application/modules/wilma-webapp/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation project(':wilma-application:wilma-message-marker')
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version:'1.3'
     implementation group: 'org.eclipse.jetty', name: 'jetty-server', version:"${jettyVersion}"
-    implementation 'org.json:json:20180813'
+    implementation "$orgJsonApi"
     implementation group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     implementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
     implementation "$googleGuavaApi"
