--- a/wilma-extras/reverseProxy/build.gradle
+++ b/wilma-extras/reverseProxy/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: "${orgSfl4jVersion}"
     implementation 'commons-io:commons-io:2.4'
     implementation "$googleGuavaApi"
-    implementation 'org.json:json:20180813'
+    implementation "$orgJsonApi"
     implementation group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
     implementation "$javaxServletApi"
     testImplementation group: 'junit', name: 'junit', version: "${jUnitVersion}"
