--- a/wilma-message-search/modules/wilma-message-search-webapp/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-webapp/build.gradle
@@ -23,13 +23,13 @@ dependencies {
     implementation group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version:'1.9.13'
     implementation group: 'javax.inject', name: 'javax.inject', version:'1'
     implementation group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
-    implementation group: 'org.eclipse.jetty', name: 'jetty-server', version:'9.4.30.v20200611'
-    implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version:'9.4.30.v20200611'
-    implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version:'9.4.30.v20200611'
-    implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version:'9.4.30.v20200611'
-    implementation group: 'org.eclipse.jetty', name: 'apache-jsp', version:'9.4.30.v20200611'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: "${jettyVersion}"
+    implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: "${jettyVersion}"
+    implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version: "${jettyVersion}"
+    implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version: "${jettyVersion}"
+    implementation group: 'org.eclipse.jetty', name: 'apache-jsp', version: "${jettyVersion}"
     implementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
-    implementation(group: 'org.slf4j', name: 'jcl-over-slf4j', version:'1.7.0') {
+    implementation (group: 'org.slf4j', name: 'jcl-over-slf4j', version: "${orgSfl4jVersion}") {
         exclude(module: 'slf4j-api')
     }
     implementation project(':wilma-message-search:wilma-message-search-domain')
