fix auto-load of persisted configuration files - #114

--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -80,7 +80,7 @@ message.logging=on
 # should Wilma Message ID be added to the message request headers or not
 message.marking=off
 
-# Relative folder path of the stub descriptor XML configuration files from project root.
+# Relative folder path of the stub descriptor JSON configuration files from project root.
 stub.descriptors.path=
 
 # Extension pattern of the stub descriptor JSON configuration files (it could be a specific file or *.json)
