fix issue #115, also enhance shortCircuit example plugin (exclude Firefox messages)

--- a/wilma-extras/shortCircuit/src/main/resources/shortCircuitStubConfigExample.json
+++ b/wilma-extras/shortCircuit/src/main/resources/shortCircuitStubConfigExample.json
@@ -11,14 +11,11 @@
             {
               "condition": {
                 "class": "OrUrlPatternChecker",
+                "negate": true,
                 "parameters": [
                   {
                     "name": "dummy",
-                    "value": "http://"
-                  },
-                  {
-                    "name": "dummy",
-                    "value": "https://"
+                    "value": "mozilla"
                   }
                 ]
               }
