--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -20,6 +20,7 @@ description = 'wilma-proxy integration'
 
 repositories {
     maven { url "https://oss.sonatype.org/service/local/staging/deploy/maven2/" }
+    mavenLocal()
 }
 
 dependencies {
@@ -27,7 +28,7 @@ dependencies {
     implementation project(':wilma-application:wilma-common')
     implementation project(':wilma-application:wilma-core')
     implementation project(':wilma-application:wilma-properties')
-//    implementation('website.magyar:mitm-java-proxy:2.0.23.SNAPSHOT') {
+//    implementation('website.magyar:mitm-java-proxy:2.1.24.108') {
     implementation('website.magyar:mitm-java-proxy:2.0.23.105') {
         exclude(group: 'ch.qos.logback', module: 'logback-classic')
         exclude(group: 'org.eclipse.jetty', module: 'jetty-io')
@@ -38,7 +39,7 @@ dependencies {
     testImplementation "junit:junit:${jUnitVersion}"
     testImplementation "$googleGuavaApi"
     testImplementation (group: 'io.netty', name: 'netty-all', version: '4.1.65.Final')
-    testImplementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.42.v20210604'
+    testImplementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.46.v20220331'
     testImplementation group: 'org.brotli', name: 'dec', version: '0.1.2'
     testImplementation group: 'com.nixxcode.jvmbrotli', name: 'jvmbrotli', version: '0.2.0'
     testImplementation group: 'com.nixxcode.jvmbrotli', name: 'jvmbrotli-win32-x86-amd64', version: '0.2.0'
