--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ build
 bin
 release
 out
+wilma-extras/gRPC/src/main/**
+wilma-extras/gRPC/src/test/**
 wilma-functionaltest/resources/savedStubConfig.json
 wilma-functionaltest/gepard-run.log
 wilma-functionaltest/gradle
@@ -23,9 +25,6 @@ wilma-functionaltest/resources/src/**/*.class
 wilma-functionaltest/resources/preCompiled/*.class
 wilma-functionaltest/resources/preCompiled/*.jar
 wilma-functionaltest/classes
-browsermob-proxy/gradlew
-browsermob-proxy/gradlew.bat
-browsermob-proxy/gradle
 wilma-test/wilma-test-server/gradle
 wilma-test/wilma-test-server/gradlew*
 wilma-test/wilma-test-client/gradle
