typo fixes + make method checkers easily available

--- a/wilma-application/modules/wilma-engine/wilma.conf.properties
+++ b/wilma-application/modules/wilma-engine/wilma.conf.properties
@@ -89,7 +89,8 @@ stub.descriptors.pattern=stubConfig.json
 # Relative folder path of the cached stub descriptor XML configuration files from project root.
 stub.descriptors.cache.path=config/cache/stub_descriptors
 
-# Max depth of the stub configuration dialog descriptor elements (condition-set-invoker, template-formatter-set-invoker) child's subtree. This is necessary because of recursive self referring.
+# Max depth of the stub configuration dialog descriptor elements (condition-set-invoker, response-formatter-set-invoker) child's subtree.
+# This is necessary because of the possibility of recursive references.
 stub.descriptor.max.depth=20
 
 # Relative path of the stub template files folder from project root.
