--- a/config/docker/Dockerfile-Wilma
+++ b/config/docker/Dockerfile-Wilma
@@ -31,6 +31,8 @@ ENV WILMA_CONFIGURATION wilma.conf.properties
 #ENV WILMA_MX_SIZE - it has no default value
 #ENV WILMA_KEYSTORE - it has no default value
 #ENV WILMA_KEYSTORE_PASSWORD - it has no default value
+#ENV WILMA_TRUSTSTORE - it has no default value
+#ENV WILMA_TRUSTSTORE_PASSWORD - it has no default value
 #ENV WILMA_JMX_PORT 9011 - note, if you use it, the port should be exposed too!
 
 # you may start wilma with default settings by /data/start_wilma.sh
