--- a/wilma-application/build.gradle
+++ b/wilma-application/build.gradle
@@ -91,7 +91,7 @@ subprojects {
     
     
     dependencies {
-        implementation(group: 'org.springframework', name: 'spring-context', version:'4.1.6.RELEASE')
+        implementation(group: 'org.springframework', name: 'spring-context', version:"${orgSpringframework}")
         implementation group: 'ch.qos.logback', name: 'logback-classic', version:'1.2.3'
         implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: "${orgSfl4jVersion}"
         implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: "${orgSfl4jVersion}"
