--- a/wilma-application/modules/wilma-core/build.gradle
+++ b/wilma-application/modules/wilma-core/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version:'2.2.4'
     implementation "$googleGuavaApi"
     implementation group: 'javax.jms', name: 'jms', version:'1.1'
-    implementation group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
+    implementation group: 'org.springframework', name: 'spring-jms', version:"${orgSpringframework}"
 }
