--- a/wilma-application/modules/wilma-indexing/build.gradle
+++ b/wilma-application/modules/wilma-indexing/build.gradle
@@ -25,6 +25,6 @@ dependencies {
   implementation(group: 'org.apache.activemq', name: 'activemq-client', version:'5.11.1') {
     exclude(module: 'geronimo-jms_1.1_spec')
   }
-  implementation group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
+  implementation group: 'org.springframework', name: 'spring-jms', version:"${orgSpringframework}"
   implementation group: 'javax.jms', name: 'jms', version:'1.1'
 }
