--- a/wilma-application/modules/wilma-message-logger/build.gradle
+++ b/wilma-application/modules/wilma-message-logger/build.gradle
@@ -21,6 +21,6 @@ description = 'Wilma Message Logger'
 dependencies {
   implementation project(':wilma-application:wilma-common')
   implementation project(':wilma-application:wilma-domain')
-  implementation group: 'org.springframework', name: 'spring-jms', version:'4.1.6.RELEASE'
+  implementation group: 'org.springframework', name: 'spring-jms', version:"${orgSpringframework}"
   implementation group: 'javax.jms', name: 'jms', version:'1.1'
 }
