--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -37,8 +37,8 @@ dependencies {
 
     testImplementation "junit:junit:${jUnitVersion}"
     testImplementation "$googleGuavaApi"
-    testImplementation (group: 'io.netty', name: 'netty-all', version: '4.1.87.Final')
-    testImplementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.50.v20221201'
+    testImplementation (group: 'io.netty', name: 'netty-all', version:"${nettyVersion}")
+    testImplementation group: 'org.eclipse.jetty', name: 'jetty-server', version:"${jettyVersion}"
     testImplementation group: 'org.brotli', name: 'dec', version: '0.1.2'
     testImplementation group: 'com.nixxcode.jvmbrotli', name: 'jvmbrotli', version: '0.2.0'
     testImplementation group: 'com.nixxcode.jvmbrotli', name: 'jvmbrotli-win32-x86-amd64', version: '0.2.0'
