--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ ext {
     javaxServletApi='javax.servlet:javax.servlet-api:3.1.0'
     javaxAnnotationApi='javax.annotation:javax.annotation-api:1.3.2'
     orgJsonApi='org.json:json:20220320'
-    orgSpringframework='5.0.20.RELEASE'
+    orgSpringframework='5.3.25' //6.0.x requires jdk17
 }
 
 apply from: 'common.gradle'
