--- a/common.gradle
+++ b/common.gradle
@@ -36,7 +36,7 @@ repositories {
     mavenLocal()
     maven { url "https://repository.jboss.org/nexus/content/groups/public" }
     maven { url "https://repo.maven.apache.org/maven2" }
-    maven { url "https://repository.mulesoft.org/nexus/content/repositories/public/" }
+    maven { url "https://maven.scijava.org/content/repositories/public/" }
 }
 
 // Source and target info
