--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,10 @@ plugins {
 ext {
     nettyVersion = '4.1.87.Final'
     jettyVersion = '9.4.50.v20221201'
-    jUnitVersion = '5.9.2' //'4.13.2'
-    mockitoAllVersion = '1.10.19'
-    mockitoCoreVersion = '4.6.1' //'3.3.3'
-    orgSfl4jVersion = '1.7.36'
-    logbackVersion = '1.2.11'
+    jUnitVersion = '5.9.2'
+    mockitoCoreVersion = '4.6.1'
+    orgSfl4jVersion = '2.0.6'
+    logbackVersion = '1.4.5'
     googleGuavaApi = 'com.google.guava:guava:31.1-jre'
     componentName='wilma'
     javaxServletApi='javax.servlet:javax.servlet-api:3.1.0'
