--- a/wilma-application/build.gradle
+++ b/wilma-application/build.gradle
@@ -92,7 +92,8 @@ subprojects {
     
     dependencies {
         implementation(group: 'org.springframework', name: 'spring-context', version:"${orgSpringframework}")
-        implementation group: 'ch.qos.logback', name: 'logback-classic', version:'1.2.3'
+        implementation group: 'ch.qos.logback', name: 'logback-classic', version:"${logbackVersion}"
+//        implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.6'
         implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: "${orgSfl4jVersion}"
         implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: "${orgSfl4jVersion}"
         implementation group: 'commons-io', name: 'commons-io', version:'2.4'
