further lib upgrades - final

--- a/wilma-application/modules/wilma-common/build.gradle
+++ b/wilma-application/modules/wilma-common/build.gradle
@@ -21,14 +21,14 @@ description = 'wilma common'
 dependencies {
     implementation project(':wilma-application:wilma-domain')
     implementation project(':wilma-application:wilma-properties')
-    implementation group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:'2.0.0'
+    implementation group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:"${FastInfoSetVersion}"
     implementation group: 'javax.jms', name: 'jms', version:'1.1'
     implementation(group: 'org.apache.activemq', name: 'activemq-client', version:'5.11.1') {
         exclude(module: 'geronimo-jms_1.1_spec')
     }
     implementation(group: 'org.apache.activemq', name: 'activemq-broker', version:'5.11.1')
     implementation(group: 'org.apache.activemq', name: 'activemq-pool', version:'5.11.1')
-    implementation group: 'org.apache.derby', name: 'derby', version:'10.11.1.1'
+    implementation group: 'org.apache.derby', name: 'derby', version:'10.16.1.1'
     implementation group: 'org.springframework', name: 'spring-jms', version:"${orgSpringframework}"
-    implementation group: 'org.apache.bcel', name: 'bcel', version:'5.2'
+    implementation group: 'org.apache.bcel', name: 'bcel', version:'6.7.0'
 }
