--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,12 @@ ext {
     orgSfl4jVersion = '2.0.6'
     logbackVersion = '1.4.5'
     googleGuavaApi = 'com.google.guava:guava:31.1-jre'
-    componentName='wilma'
-    javaxServletApi='javax.servlet:javax.servlet-api:3.1.0'
-    javaxAnnotationApi='javax.annotation:javax.annotation-api:1.3.2'
-    orgJsonApi='org.json:json:20220320'
+    componentName = 'wilma'
+    javaxServletApi = 'javax.servlet:javax.servlet-api:3.1.0'
+    javaxAnnotationApi = 'javax.annotation:javax.annotation-api:1.3.2'
+    orgJsonApi = 'org.json:json:20220320'
     orgSpringframework='5.3.25' //6.0.x requires jdk17
+    FastInfoSetVersion = '2.1.0'
 }
 
 apply from: 'common.gradle'
