--- a/wilma-application/build.gradle
+++ b/wilma-application/build.gradle
@@ -93,12 +93,11 @@ subprojects {
     dependencies {
         implementation(group: 'org.springframework', name: 'spring-context', version:"${orgSpringframework}")
         implementation group: 'ch.qos.logback', name: 'logback-classic', version:"${logbackVersion}"
-//        implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.6'
         implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: "${orgSfl4jVersion}"
         implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: "${orgSfl4jVersion}"
-        implementation group: 'commons-io', name: 'commons-io', version:'2.4'
-        implementation group: 'janino', name: 'janino', version:'2.5.10'
-        implementation group: 'net.sf.saxon', name: 'Saxon-HE', version:'9.9.0-2'
+        implementation group: 'commons-io', name: 'commons-io', version:'2.11.0'
+        implementation group: 'org.codehaus.janino', name: 'janino', version: '3.1.9'
+        implementation group: 'net.sf.saxon', name: 'Saxon-HE', version:'12.0'
         testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoCoreVersion}"
         testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: "${mockitoCoreVersion}"
         testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${jUnitVersion}"
