--- a/wilma-application/modules/wilma-compression/build.gradle
+++ b/wilma-application/modules/wilma-compression/build.gradle
@@ -21,6 +21,6 @@ description = 'wilma compression'
 dependencies {
   implementation project(':wilma-application:wilma-common')
   implementation project(':wilma-application:wilma-domain')
-  implementation group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:'2.0.0'
-  implementation 'commons-codec:commons-codec:1.11'
+  implementation group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:"${FastInfoSetVersion}"
+  implementation 'commons-codec:commons-codec:1.15'
 }
