--- a/wilma-test/wilma-test-server/build.gradle
+++ b/wilma-test/wilma-test-server/build.gradle
@@ -56,13 +56,13 @@ dependencies {
     implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version:"${jettyVersion}"
     implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version:"${jettyVersion}"
     implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version:"${jettyVersion}"
-    implementation group: 'commons-io', name: 'commons-io', version:'2.4'
-    implementation group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:'2.0.0'
+    implementation group: 'commons-io', name: 'commons-io', version:'2.11.0'
+    implementation group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:"${FastInfoSetVersion}"
     testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoCoreVersion}"
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: "${mockitoCoreVersion}"
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${jUnitVersion}"
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${jUnitVersion}"
-    testImplementation group: 'cglib', name: 'cglib', version:'3.0'
+    testImplementation group: 'cglib', name: 'cglib', version:'3.3.0'
 }
 
 test.useJUnit()
