--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ You should have received a copy of the GNU General Public License
 along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 ===========================================================================*/
 plugins {
-    id "org.sonarqube" version "3.2.0"
+    id "org.sonarqube" version "4.4.1.3373"
 }
 
 ext {
@@ -48,7 +48,7 @@ subprojects {
     }
 }
 
-sonarqube {
+sonar {
     properties {
         property "sonar.projectKey", "epam/Wilma"
         property "sonar.organization", "epam"
