--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation project(':wilma-application:wilma-core')
     implementation project(':wilma-application:wilma-properties')
     implementation('website.magyar:mitm-java-proxy:2.5.27.114') {
+//    implementation('website.magyar:mitm-java-proxy:2.5.28.SNAPSHOT') {
         exclude(group: 'ch.qos.logback', module: 'logback-classic')
         exclude(group: 'org.eclipse.jetty', module: 'jetty-io')
         exclude(group: 'org.slf4j', module: 'jcl-over-slf4j')
